fix wrong color on uiselctor

--- a/src/pages/Animefreak/style.less
+++ b/src/pages/Animefreak/style.less
@@ -1,5 +1,5 @@
 @import "./../pages";
 
-#malp a,select,input {
+#malp a,select,input,#malTotal {
   color:white !important;
 }
